Fix navbar z-index bug

--- a/src/OrchardCore.Themes/TheAdmin/Assets/scss/TheAdmin.scss
+++ b/src/OrchardCore.Themes/TheAdmin/Assets/scss/TheAdmin.scss
@@ -67,7 +67,7 @@ body {
 .ta-navbar-top {
     @extend .navbar, .navbar-expand-md, .navbar-light, .fixed-top;
     border-bottom: $border-content;
-    z-index: calc($zindex-sticky + 1);
+    z-index: calc(#{$zindex-sticky+1});
     padding: 0.3rem 1rem;
     padding-left: 0;
     background-color: white;
